--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -16,5 +16,5 @@ $black: #000 !default;
 
 $primary: #1F5C5A !default;
 $teal: #1F5C5A !default;
-$pink: #963235 !default;
-$yellow: #977532 !default;
+$pink2: #963235 !default;
+$pink: #977532 !default;
