--- a/css/agency.css
+++ b/css/agency.css
@@ -5,7 +5,7 @@
  */
 
 .bg-light {
-  background-color: black !important;
+  background-color: #0c0c0c !important;
 }
 
 h2 {
@@ -19,7 +19,7 @@ h4 {
 body {
   overflow-x: hidden;
   font-family: 'Roboto Slab', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
-  background-color: black;
+  background-color: #0c0c0c;
 }
 
 p {
@@ -130,14 +130,14 @@ img::-moz-selection {
   right: 0;
   padding: 13px;
   text-transform: uppercase;
-  color: #963235;
+  color: #977532;
   border: 0;
   background-color: #1F5C5A;
   font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
 
 #mainNav .navbar-brand {
-  color: #963235;
+  color: #977532;
   font-family: 'Kaushan Script', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
 
@@ -150,7 +150,7 @@ img::-moz-selection {
   font-weight: 400;
   padding: 0.75em 0;
   letter-spacing: 1px;
-  color: #963235;
+  color: #977532;
   font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
 
@@ -300,7 +300,7 @@ header.masthead .intro-text .intro-heading {
   margin: 0 auto;
   padding: 25px;
   text-align: center;
-  background-color: black;
+  background-color: #0c0c0c;
 }
 
 #portfolio .portfolio-item .portfolio-caption h4 {
@@ -617,8 +617,9 @@ header.masthead .intro-text .intro-heading {
 }
 
 section#contact {
-  background-color: #212529;
-  background-image: url("../img/map-image.png");
+  background-color: #0c0c0c;
+  background-image: url("../img/Cody Added/worldblack.jpg");
+  background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
 }
