--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -1,7 +1,8 @@
 // Styling for the contact section
 section#contact {
-  background-color: $gray-900;
-  background-image: url('../img/map-image.png');
+  background-color: #0c0c0c;
+  background-image: url("../img/Cody Added/worldblack.jpg");
+  background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
   .section-heading {
