--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -12,7 +12,7 @@
   font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
 .bg-light {
-   background-color: black !important; 
+   background-color: #0c0c0c !important; 
 }
 h2{
   color: $teal;
