--- a/scss/_portfolio.scss
+++ b/scss/_portfolio.scss
@@ -45,7 +45,7 @@
       margin: 0 auto;
       padding: 25px;
       text-align: center;
-      background-color: black;
+      background-color: #0c0c0c;
       h4 {
         margin: 0;
         text-transform: none;
@@ -144,4 +144,35 @@
 }
 .codypic{
   padding: 20px;
+}
+
+.progress-bar {
+  background-color: #2ecc71;
+}
+.progress-bar {
+  font-size: 16px;
+  background-color: #8980fe;
+  box-shadow: none;
+  border-radius: 11px;
+  line-height: 18px;
+  padding-left: 6px;
+  text-align: left;
+  font-weight: 600;
+  color: #1d1d1d;
+  padding-top: 1px;
+}
+.progress-bar {
+  float: left;
+  width: 0;
+  height: 100%;
+  font-size: 12px;
+  line-height: 20px;
+  color: #fff;
+  text-align: center;
+  background-color: #$teal !important;
+  -webkit-box-shadow: inset 0 -1px 0 rgba(0,0,0,.15);
+  box-shadow: inset 0 -1px 0 rgba(0,0,0,.15);
+  -webkit-transition: width .6s ease;
+  -o-transition: width .6s ease;
+  transition: width .6s ease;
 }
