--- a/scss/_portfolio.scss
+++ b/scss/_portfolio.scss
@@ -169,7 +169,7 @@
   line-height: 20px;
   color: #fff;
   text-align: center;
-  background-color: #$teal !important;
+  background-color: $teal !important;
   -webkit-box-shadow: inset 0 -1px 0 rgba(0,0,0,.15);
   box-shadow: inset 0 -1px 0 rgba(0,0,0,.15);
   -webkit-transition: width .6s ease;
