--- a/scss/_timeline.scss
+++ b/scss/_timeline.scss
@@ -118,6 +118,7 @@
         width: 100px;
         height: 100px;
         margin-left: -50px;
+        background-color: black !important;
         h4 {
           font-size: 13px;
           line-height: 18px;
