--- a/css/agency.css
+++ b/css/agency.css
@@ -41,7 +41,10 @@ a:hover {
 h1,
 h2,
 h3,
-h4,
+h4 {
+  color: #977532 !important;
+}
+
 h5,
 h6 {
   font-weight: 700;
@@ -130,14 +133,14 @@ img::-moz-selection {
   right: 0;
   padding: 13px;
   text-transform: uppercase;
-  color: #977532;
+  color: #1F5C5A;
   border: 0;
   background-color: #1F5C5A;
   font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
 
 #mainNav .navbar-brand {
-  color: #977532;
+  color: #1F5C5A;
   font-family: 'Kaushan Script', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
 
@@ -199,7 +202,10 @@ header.masthead {
 
 header.masthead .intro-text {
   padding-top: 150px;
-  padding-bottom: 100px;
+  padding-bottom: 300px;
+  position: absolute;
+  top: 210px;
+  left: 20%;
 }
 
 header.masthead .intro-text .intro-lead-in {
@@ -220,8 +226,11 @@ header.masthead .intro-text .intro-heading {
 
 @media (min-width: 768px) {
   header.masthead .intro-text {
-    padding-top: 300px;
-    padding-bottom: 200px;
+    padding-top: 10px;
+    padding-bottom: 300px;
+    position: absolute;
+    top: 210px;
+    left: 20%;
   }
   header.masthead .intro-text .intro-lead-in {
     font-size: 40px;
@@ -246,6 +255,15 @@ header.masthead .intro-text .intro-heading {
 
 #services2 {
   padding: 10px;
+}
+
+#disc {
+  height: 200px;
+  width: 200px;
+}
+
+#discgraph {
+  padding: 10px !important;
 }
 
 #portfolio .portfolio-item {
@@ -409,6 +427,39 @@ header.masthead .intro-text .intro-heading {
   padding: 20px;
 }
 
+.progress-bar {
+  background-color: #2ecc71;
+}
+
+.progress-bar {
+  font-size: 16px;
+  background-color: #8980fe;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+  border-radius: 11px;
+  line-height: 18px;
+  padding-left: 6px;
+  text-align: left;
+  font-weight: 600;
+  color: #1d1d1d;
+  padding-top: 1px;
+}
+
+.progress-bar {
+  float: left;
+  width: 0;
+  height: 100%;
+  font-size: 12px;
+  line-height: 20px;
+  color: #fff;
+  text-align: center;
+  background-color: #1F5C5A !important;
+  -webkit-box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
+  box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
+  -webkit-transition: width .6s ease;
+  transition: width .6s ease;
+}
+
 .timeline {
   position: relative;
   padding: 0;
@@ -540,6 +591,7 @@ header.masthead .intro-text .intro-heading {
     width: 100px;
     height: 100px;
     margin-left: -50px;
+    background-color: black !important;
   }
   .timeline > li .timeline-image h4 {
     font-size: 13px;
@@ -616,6 +668,10 @@ header.masthead .intro-text .intro-heading {
   margin-top: 0;
 }
 
+ul.social-buttons li a {
+  font-size: 32px !important;
+}
+
 section#contact {
   background-color: #0c0c0c;
   background-image: url("../img/Cody Added/worldblack.jpg");
@@ -675,6 +731,10 @@ section#contact :-ms-input-placeholder {
   font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
 
+.contactbot {
+  color: #977532;
+}
+
 footer {
   padding: 25px 0;
   text-align: center;
@@ -715,4 +775,12 @@ ul.social-buttons li a {
 
 ul.social-buttons li a:active, ul.social-buttons li a:focus, ul.social-buttons li a:hover {
   background-color: #1F5C5A;
+}
+
+.codypic {
+  margin-top: -100px;
+}
+
+#codypidid {
+  margin-top: 500px;
 }
