--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -12,7 +12,10 @@ header.masthead {
   height: 550px;
   .intro-text {
     padding-top: 150px;
-    padding-bottom: 100px;
+    padding-bottom: 300px;
+    position: absolute;
+    top: 210px;
+    left: 20%;
     .intro-lead-in {
       font-size: 22px;
       font-style: italic;
@@ -33,8 +36,11 @@ header.masthead {
 @media(min-width:768px) {
   header.masthead {
     .intro-text {
-      padding-top: 300px;
-      padding-bottom: 200px;
+      padding-top: 10px;
+      padding-bottom: 300px;
+      position: absolute;
+      top: 210px;
+      left: 20%;
       .intro-lead-in {
         font-size: 40px;
         font-style: italic;
