--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -58,3 +58,11 @@ header.masthead {
     }
   }
 }
+.ransford_bubble{
+  border-radius: 65%;
+  background-color: radial-gradient($teal, transparent);
+  
+}
+.intro-lead-in{
+  color: $pink !important;
+}
