--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -33,7 +33,7 @@
         @include heading-font;
         &.active,
         &:hover {
-          color: $primary;
+          color: $pink;
         }
       }
     }
@@ -71,4 +71,7 @@
       }
     }
   }
+}
+.nav-link:hover {
+  color: #977532 !important;
 }
