--- a/css/agency.css
+++ b/css/agency.css
@@ -182,6 +182,9 @@ img::-moz-selection {
   #mainNav .navbar-nav .nav-item .nav-link {
     padding: 1.1em 1em !important;
   }
+  #mainNav .navbar-brand:hover {
+    color: #977532;
+  }
   #mainNav.navbar-shrink {
     padding-top: 0;
     padding-bottom: 0;
@@ -193,7 +196,7 @@ img::-moz-selection {
   }
 }
 
-.nav-link:hover {
+b:hover {
   color: #977532 !important;
 }
 
