--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -61,6 +61,9 @@
         }
       }
     }
+    .navbar-brand:hover {
+      color: $pink;
+    }
     &.navbar-shrink {
       padding-top: 0;
       padding-bottom: 0;
@@ -72,6 +75,6 @@
     }
   }
 }
-.nav-link:hover {
+b:hover {
   color: #977532 !important;
 }
