--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -3,6 +3,8 @@ body {
   overflow-x: hidden;
   @include body-font;
   background-color: #0c0c0c; 
+  margin-left: 5px !important;
+  margin-left: 5px !important;
 
 }
 b{
