--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -18,3 +18,4 @@ $primary: #1F5C5A !default;
 $teal: #1F5C5A !default;
 $pink2: #963235 !default;
 $pink: #977532 !default;
+$charcoal: #0c0c0c !default;
