--- a/scss/agency.scss
+++ b/scss/agency.scss
@@ -14,4 +14,5 @@
 @import "footer.scss";
 @import "foo.scss";
 @import "codypic.scss";
-@import "modals";
+@import "modals.scss";
+@import "new_nav.scss";
